--- a/nimbus3d/package.json
+++ b/nimbus3d/package.json
@@ -12,6 +12,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-simple-oauth2-login": "^0.2.0",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
