--- a/nimbus3d/package.json
+++ b/nimbus3d/package.json
@@ -15,6 +15,9 @@
     "react-scripts": "4.0.1",
     "react-simple-oauth2-login": "^0.2.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
