--- a/nimbus3d/package.json
+++ b/nimbus3d/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "material-auto-rotating-carousel": "^3.0.2",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
