--- a/nimbus3d/package.json
+++ b/nimbus3d/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
+    "react-material-ui-carousel": "^2.1.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
